--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
       </div>
     </header>
     <main>
-      <section class="hero-banner">
+      <section class="section hero-banner">
         <div class="container hero-container">
           <h1 class="page-title">Effective Solutions for Your Business</h1>
           <button class="order-button" type="button">Order Service</button>
         </div>
       </section>
-      <section class="benefits">
+      <section class="section benefits">
         <div class="container benefits-container">
           <h2 class="benefits-title visually-hidden">Benefits</h2>
           <ul class="benefits-list">
@@ -99,7 +99,7 @@
           </ul>
         </div>
       </section>
-      <section class="team">
+      <section class="section team">
         <div class="container team-container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -158,7 +158,7 @@
           </ul>
         </div>
       </section>
-      <section class="portfolio">
+      <section class="section portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
